refactor create-team